welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:17: error: reassignment to val
		compteur=compteur+1
                        ^